fix: overflow vista movil

--- a/src/css/edit-account.css
+++ b/src/css/edit-account.css
@@ -58,7 +58,6 @@
 
 @media (max-width: 640px) {
   .form-container {
-    width: 100%;
     height: 100%;
   }
 
